# RemotememoryProyectoUno

./: CMakeLists.txt  Estructura.cpp  Estructura.h  lista.h  main.cpp  server  server.cpp  server.h
